--- a/package.json
+++ b/package.json
@@ -2,10 +2,55 @@
   "name": "tueri-api",
   "version": "1.0.0",
   "description": "",
+  "engines": {
+    "node": "10.x"
+  },
   "main": "src/index.js",
+  "directories": {
+    "lib": "src/lib"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha --compilers js:babel-register",
+    "cover": "istanbul cover ./node_modules/.bin/_mocha -- --compilers js:babel-register",
+    "start": "nodemon src/index.js --exec babel-node",
+    "build": "babel src -d dist",
+    "preserve": "babel src -d dist",
+    "serve": "node dist/index.js"
   },
   "author": "",
-  "license": "MIT"
+  "license": "MIT",
+  "private": true,
+  "dependencies": {
+    "aws-sdk": "^2.311.0",
+    "body-parser": "^1.18.2",
+    "cors": "^2.8.4",
+    "crypto": "^1.0.1",
+    "dotenv": "^5.0.1",
+    "express": "^4.16.3",
+    "fs": "0.0.1-security",
+    "jimp": "^0.2.28",
+    "jsonwebtoken": "^8.2.1",
+    "morgan": "^1.9.0",
+    "nodemailer": "^4.4.0",
+    "pg": "^7.4.0",
+    "regenerator-runtime": "^0.11.1",
+    "request": "^2.88.0",
+    "rotating-file-stream": "^1.3.6",
+    "twilio": "^3.19.2",
+    "url": "^0.11.0",
+    "uuid": "^3.2.1"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-preset-env": "^1.6.1",
+    "babel-register": "^6.26.0",
+    "chai": "^4.1.2",
+    "chai-http": "^4.2.0",
+    "eslint": "^4.19.1",
+    "google-auth-library": "^0.12.0",
+    "googleapis": "^23.0.0",
+    "mocha": "^5.1.1",
+    "nodemon": "^1.18.4",
+    "readline": "^1.3.0",
+  }
 }
