--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
     "aws-sdk": "^2.311.0",
     "body-parser": "^1.18.2",
     "cors": "^2.8.4",
-    "crypto": "^1.0.1",
     "dotenv": "^5.0.1",
     "express": "^4.16.3",
     "fs": "0.0.1-security",
@@ -51,6 +50,6 @@
     "googleapis": "^23.0.0",
     "mocha": "^5.1.1",
     "nodemon": "^1.18.4",
-    "readline": "^1.3.0",
+    "readline": "^1.3.0"
   }
 }
